--- a/prl_game.html
+++ b/prl_game.html
@@ -149,7 +149,7 @@
 
         .objectives-panel.position-right-bottom {
             right: 6px;
-            top: 45%;
+            top: 53%;
             bottom: auto;
             transform: none;
         }
@@ -597,7 +597,7 @@
             <h2>¡Enhorabuena!</h2>
             <p>Has completado todos los niveles de Visión PRL.</p>
             <p style="font-weight: 700; color: var(--dark);">Ahora ya conoces los riesgos más comunes. Con el certificado PRL aprenderás a prevenirlos.</p>
-            <button class="btn btn-primary" onclick="restartGame()">Volver a jugar</button>
+            <button class="btn btn-primary" onclick="finishGame()">Finalizar</button>
         </div>
     </div>
 
@@ -1205,6 +1205,19 @@
             document.getElementById('gameContainer').style.display = 'none';
             document.getElementById('introScreen').classList.remove('hidden');
             updateIntroScreen();
+        }
+
+        function finishGame() {
+            // Call React Native WebView to signal task completion
+            if (window.ReactNativeWebView) {
+                window.ReactNativeWebView.postMessage(JSON.stringify({ 
+                    action: 'TASK_COMPLETED' 
+                }));
+            } else {
+                // Fallback for browser testing
+                console.log('Game completed!');
+                alert('Game completed! (ReactNativeWebView not available)');
+            }
         }
 
         document.addEventListener('DOMContentLoaded', () => {
