--- a/prl_game.html
+++ b/prl_game.html
@@ -160,8 +160,9 @@
 
         .objectives-panel.position-left {
             left: 6px;
-            top: 50%;
-            transform: translateY(-50%);
+            top: auto;
+            bottom: 15%;
+            transform: none;
         }
 
         .objectives-panel.position-right-bottom {
